Changelog
=========

0.1.1 (unreleased)
------------------

- Nothing changed yet.


0.1.0 (2016-01-05)
------------------

- Initial release