@@ -1,15 +1,15 @@
 <div class="documentByLine"
      id="plone-document-byline"
      i18n:domain="plone"
-     tal:condition="view/show">
+     tal:condition="view/show"
+     tal:define="isAnon context/@@plone_portal_state/anonymous;">
   <span id="lock-icon"
         tal:define="lock_icon view/locked_icon"
-        tal:condition="python:lock_icon">
+        tal:condition="python:lock_icon and not isAnon">
       <img tal:replace="structure lock_icon" />
   </span>
 
-  <tal:creator tal:define="creator_short_form view/creator;
-                           isAnon context/@@plone_portal_state/anonymous;"
+  <tal:creator tal:define="creator_short_form view/creator;"
                tal:condition="python: creator_short_form and not isAnon">
   <tal:name tal:define="creator_long_form string:?author=${creator_short_form};
                         creator_is_openid python:'/' in creator_short_form;
