@@ -4,7 +4,8 @@ Changelog
 0.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- fix document_byline viewlet for anonymous (#80)
+  [cekk]
 
 
 0.1.0 (2016-01-05)
